# mirrorcheck

./: .gitignore  CMakeLists.txt  README.md  build.txt
doc/: test.json
publish/test/test/test/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
publish/test/test/test.xcodeproj/: project.pbxproj
publish/test/test/test.xcodeproj/project.xcworkspace/xcuserdata/sosopop.xcuserdatad/: UserInterfaceState.xcuserstate
publish/test/test/test.xcodeproj/xcuserdata/sosopop.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/demo/android2/app/: build.gradle
src/demo/android2/app/src/androidTest/java/com/example/mirroraccel/: ExampleInstrumentedTest.java
src/demo/android2/app/src/main/: AndroidManifest.xml
src/demo/android2/app/src/main/java/com/example/mirroraccel/: MainActivity.java  MainApplication.java
src/demo/android2/app/src/main/res/values/: strings.xml
src/demo/android2/app/src/test/java/com/example/mirroraccel/: ExampleUnitTest.java
src/demo/android2/gradle/wrapper/: gradle-wrapper.properties
src/demo/ios/mirroraccel/include/mirroraccel/: mirroraccel.h
src/demo/ios/test/test/test/: Dictionary.h  OID_deal.h
src/demo/ios/test/test/test.xcodeproj/project.xcworkspace/xcuserdata/sosopop.xcuserdatad/: UserInterfaceState.xcuserstate
src/jni/: gen.bat
src/jni/com/baiduren/lemontv/module/: MirrorAccel.java
src/mirroraccel/: CMakeLists.txt  main.c  main.cpp  mirroraccel.c  mirroraccel.cpp  mirroraccel.h  mirroraccel_connincoming.cpp  mirroraccel_connincoming.h  mirroraccel_connoutgoing.cpp  mirroraccel_connoutgoing.h  mirroraccel_except.cpp  mirroraccel_except.h  mirroraccel_inter.h  mirroraccel_jni.cpp  mirroraccel_jni.h  mirroraccel_mirroritem.cpp  mirroraccel_mirroritem.h  mirroraccel_request.h  mirroraccel_response.h  mirroraccel_server.cpp  mirroraccel_server.h  mirroraccel_servermgr.cpp  mirroraccel_servermgr.h  mirroraccel_task.h  mirroraccel_thread.c  mirroraccel_thread.h  mirroraccel_util.cpp  mirroraccel_util.h
